Decouple HostedOptionParser setup from classpath/modulepath scanning